# PyNanoBot

./: CONTRIBUTING.md  PYNANOBOT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EVOLUTION_MODEL_A.md  FORK_IN_EXT.md  PHASE3_NOTES.md  PHILOSOPHY.md  ROADMAP.md  UPSTREAM.md  VERSIONING.md
nanobot/: nanobot.py
nanobot/agent/: __init__.py  compactor.py  delegation.py  lifecycle_hooks.py  loop.py  memory.py  reminders.py  runner.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/utils/: helpers.py
plans/: cursor-feedback.md  plan1-mem.md  plan2-context-compact.md  plan3-sub-agent.md  plan4-reminder-hook.md
pynanobot/: __init__.py  cli.py
pynanobot/agent/: __init__.py
pynanobot/ext/: __init__.py  compactor.py  delegation.py  loop.py  runner.py
scripts/: check_upstream_lock.py  report_fork_diff.py
tests/: test_pynanobot_reexport.py
tests/agent/: test_compactor.py  test_library_stack_integration.py  test_lifecycle_hooks.py  test_memory_store.py  test_reminders.py
tests/cli/: test_commands.py
