[project]
name = "pynanobot"
version = "0.3.0"
description = (
    "PyNanoBot: extension & distribution on nanobot-ai; "
    "agent/VibeCoding patterns, GGUF/small-model focus (import pynanobot)."
)
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nanobot contributors"},
    {name = "PyNanoBot maintainers"},
]
keywords = ["ai", "agent", "chatbot", "pynanobot", "nanobot", "openclaw", "vibecoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nanobot-ai>=0.1.4.post6,<0.2",
]

[project.optional-dependencies]
api = [
    "aiohttp>=3.9.0,<4.0.0",
]
wecom = [
    "nanobot-ai[wecom]",
]
weixin = [
    "nanobot-ai[weixin]",
]
matrix = [
    "nanobot-ai[matrix]",
]
discord = [
    "discord.py>=2.5.2,<3.0.0",
]
langsmith = [
    "nanobot-ai[langsmith]",
]
dev = [
    "nanobot-ai[dev]",
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/chenhaodev/PyNanoBot"
Upstream = "https://github.com/HKUDS/nanobot"
Documentation = "https://github.com/chenhaodev/PyNanoBot/blob/main/docs/PHILOSOPHY.md"

[project.scripts]
pynanobot = "pynanobot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "pynanobot/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["pynanobot"]

[tool.hatch.build.targets.wheel.sources]
"pynanobot" = "pynanobot"

[tool.hatch.build.targets.sdist]
include = [
    "nanobot/",
    "pynanobot/",
    "bridge/",
    "README.md",
    "LICENSE",
    "docs/",
    "upstream.lock",
    "PYNANOBOT.md",
    "CONTRIBUTING.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["nanobot", "pynanobot"]
omit = ["tests/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
